# Cybathlon-Vision-Race-2024

./: README.md
CAO Solidworks/Pentographe V1/: 100315.SLDPRT  Assemblage_poignee.SLDASM  Bielle_avec_roulement_depassant - partie  haute.SLDPRT  Bielle_avec_roulement_depassant - partie basse.SLDPRT  Corniere divisé.SLDPRT  Corniere.SLDPRT  Disk_driver.SLDPRT  Fixation Harnais Pento Usinage.SLDASM  MX-28 SERVO.SLDPRT  Plaque Verticale.SLDPRT  Plaque principale.SLDPRT  ROBOTIS_U2D2_Power_Hub_Board.SLDASM  axe.SLDPRT  bielle_2 - partie haute.SLDPRT  bielle_2 _partie basse.SLDPRT  bielle_motor.SLDPRT  bout_effecteur.SLDPRT  entretoise.SLDPRT  hex nut style 1 gradeab_iso.sldprt  mannequin_debout_1_76_m_211111111.SLDPRT  pan head cross recess screw_iso.sldprt  poignee.SLDPRT  radial ball bearing_68_am.sldprt  test_assemblage.SLDASM  vis_M3_40.SLDPRT  ~$bout_effecteur.SLDPRT
CAO Solidworks/Pentographe V2/: Angle.SLDPRT  Assemblage_pento.SLDASM  Assemblage_porte_camera.SLDASM  Bielle_inferieur_2e_etage_3mm.SLDPRT  Fixation Harnais Pento Usinage.SLDASM  MX-28 SERVO.SLDPRT  Plaque Verticale.SLDPRT  Plaque principale.SLDPRT  Rail_Harnais.SLDPRT  ZED2.SLDPRT  ZED2.step.SLDPRT  appui_plan.SLDPRT  attache_casque.SLDPRT  bieille_5mm_inferieur.SLDPRT  bras_3mm_2_etage.SLDPRT  bras_5mm.SLDPRT  bras_inferieur_3mm.SLDPRT  bras_superieur.SLDPRT  cartable_squelette.SLDPRT  carte_dynamixel.SLDASM  casque7-C1.SLDPRT  casque7-C2.SLDPRT  casque7-D.SLDPRT  casque7-V.SLDPRT  casque7.SLDPRT  countersunk flat head cross recess screw_iso.sldprt  couvercle_poignée.SLDPRT  egaliseur.SLDPRT  harnais.SLDPRT  hex nut style 1 gradeab_iso.sldprt  hex thin nut gradeb_iso.sldprt  pan head cross recess screw_iso.sldprt  pc.SLDPRT  plain washer clevis pin grade a_iso.sldprt  plaque.SLDPRT  porte_camera.SLDPRT  porte_moteurs_PLA.SLDPRT  porte_pc.SLDASM  radial ball bearing_68_skf.sldprt  rebord.SLDPRT  (+2 more)
CAO Solidworks/Pentographe V2/Plans/: porte_moteurs_PLA.SLDDRW
Documentation/Gantt/: test.md
Filtre_pcl_librairie/Filtre_pcl_librairie/pcl/: CMakeLists.txt  code  code.cpp  git.py  input.txt  output.txt
Matlab/: trace_des_couples_3D.m
Sdw2URDF/URDF_drive/URDF_final/: CMakeLists.txt  (+1 more)
dev2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dev2_ws/log/: latest_build  latest_list
navigation_py/: package.xml  setup.cfg  setup.py
navigation_py/navigation_py/: dijkstra_node.py  direction.py  direction_ss_bool.py
(+50 files in other folders)
